--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@vercel/speed-insights": "^1.0.12",
     "aos": "^3.0.0-beta.6",
     "next": "^14.2.12",
     "react": "^18.3.1",
